--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,4 @@
-# mod_rewrite starts here
-
-RewriteEngine on
-
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteRule ^(.*)$ $1.html [L]
